@@ -1,3 +1,7 @@
+1997-12-01  Tim Pierce  <twp@skepsis.com>
+
+	* scmconfig.h.in: Regenerated for USCORE change in ../acconfig.h.
+
 Sun Nov 30 11:29:18 1997  Mikael Djurfeldt  <mdj@kenneth>
 
 	* coop-defs.h (struct coop_t): Renamed errno --> _errno to prevent
